# MTS3-MCTE-Team-Project-Energy-G1

./: .dockerignore  .env.example  .env.local.example  .gitignore  AUDIT_REPORT.md  CLAUDE.MD  INSTALLATION_GUIDE.md  INTEGRATION_SUMMARY.md  LOCAL_RUN.md  MODERNIZATION_REPORT.md  README.md  SECURITY.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  all_benchmark_results.csv  bash.exe.stackdump  compose.e2e.yaml  compose.integration.rendered.yaml  compose.main.rendered.yaml  compose.main.yaml  compose.realtime.yaml  compose.yaml  debug_parquet.py  debug_preds.py  deploy-cloudflare.bat  deploy-cloudflare.sh  diagnostics_nilmformer.py  docker-compose.yml  energy.ts  hybrid_metadata.json  logs.txt  mlp_metadata.json  model_metadata.json  package-lock.json  package.json  railway.json  requirements-training.txt  requirements.txt  status.json  supabase-schema.sql
apps/backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.mqtt  Dockerfile.simulator  Dockerfile.worker  README.md  constraints.txt  pyproject.toml  railway.api.toml  railway.simulator.toml  railway.worker.toml  requirements.txt
apps/backend/app/: main.py
apps/backend/app/api/: deps.py  middleware.py
apps/backend/app/api/routers/: analytics.py  health.py  inference.py
apps/backend/app/core/: config.py  security.py  telemetry.py
apps/backend/app/infra/: __init__.py
apps/backend/app/schemas/: analytics.py  common.py  inference.py  ingest.py
apps/backend/models/: registry.json  registry.schema.json
apps/backend/models/tcn_sa/: TCN_SA_Dishwasher_20260126_225619_best.pt  TCN_SA_Dryer_20260127_104154_best.pt  TCN_SA_EVCharger_20260126_204724_best.pt  TCN_SA_EVSocket_20260127_114410_best.pt  TCN_SA_HeatPump_best.pt  TCN_SA_Oven_20260127_075244_best.pt  TCN_SA_RainwaterPump_20260127_100548_best.pt  TCN_SA_RangeHood_20260127_091844_best.pt  TCN_SA_Stove_20260127_054136_best.pt  TCN_SA_WashingMachine_20260127_013621_best.pt
apps/backend/scripts/: _asset_finder.py  build_fixture_from_y_test.py  import_checkpoints.py  import_transformer_checkpoint.py  seed_from_y_test.py  seed_influx_demo_data.py  verify_auth_setup.py
apps/backend/src/app/: main.py  mqtt_ingestor.py  simulator_main.py  worker_main.py
apps/backend/tests/: conftest.py  test_auth_jwks.py  test_transformer_model.py
apps/backend/tests/component/: __init__.py  test_analytics_api.py  test_auth_jwks.py  test_health_api.py  test_inference_pipeline.py  test_ingest_api.py  test_models_api.py
apps/backend/tests/e2e/: __init__.py  test_e2e_flow.py  test_railway_e2e.py
apps/backend/tests/fixtures/: aggregate_kw_sample.npy  y_midpoint_kw_sample.npy
apps/backend/tests/integration/: conftest.py  test_data_ingestion.py  test_e2e_flow.py  test_health_integration.py  test_inference_pipeline.py
apps/backend/tests/unit/: test_data_ingestion.py  test_flux_builder.py  test_influx_writer.py  test_model_registry.py  test_producer_schema.py  test_railway_config.py
(+630 files in other folders)
