[project]
name = "nilm-backend"
version = "0.1.0"
description = "NILM Energy Monitor Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "influxdb-client[async]==1.47.0",
    "supabase==2.11.0",
    "PyJWT[crypto]==2.10.1",
    "cryptography==44.0.0",
    "safetensors==0.4.5",
    "numpy>=1.26.0,<2.0.0",
    "prometheus-client==0.21.1",
    "python-json-logger==3.2.1",
    "httpx==0.28.1",
    "redis[hiredis]==5.2.1",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "tensorboard>=2.15.0",
    # Development tools (kept here for simplicity or move to [dev-dependencies] if using hatch/poetry)
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enable pycodestyle ('E') and Pyflakes ('F') codes by default.
select = ["E", "F", "B", "I", "UP"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Target Python 3.12
target-version = "py312"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --import-mode=importlib --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
markers = [
    "unit: Pure unit tests (no network, no docker)",
    "component: Component tests with mocks (FastAPI TestClient)",
    "e2e: End-to-end tests requiring Docker stack",
    "railway: Smoke tests for Railway deployed service",
]
filterwarnings = [
    "ignore::DeprecationWarning:pythonjsonlogger.*:",
    "ignore::DeprecationWarning:supabase.*:",
    "ignore::DeprecationWarning:gotrue.*:",
]
